[package]
name = "range_sampling"
version = "0.1.0"
authors = ["SIRS-SIGMOD <sirs.sigmod@gmail.com>"]
edition = "2018"

[dependencies]
rand = { version = "0.7.2", features = ["small_rng"] }
rand_pcg = "0.2.0"
sfmt = "0.6.0"
superslice = "1.0.0"
order-stat = "0.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
libc = "0.2.66"
threadpool = "1.7.1"
core_affinity = "0.5.10"